--- a/src/app/components/ccd-search/ccd-search.component.scss
+++ b/src/app/components/ccd-search/ccd-search.component.scss
@@ -18,10 +18,9 @@
 
 .govuk-radios__conditional {
   margin-bottom: 15px;
-  margin-left: 2px;
-  padding-left: 9px;
-  border-left: 4px solid #b1b4b6;
-  margin-top: 5px;;
+  margin-left: 18px;
+  padding-left: 33px;
+  border-left: 4px solid #b1b4b6
 }
 
 .govuk-radios__conditional--hidden {
@@ -43,8 +42,4 @@
 
 .govuk-label--m{
   font-size: large;
-}
-
-.govuk-radios__label {
-  PADDING: 10px 1px 8px;
 }
